--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,19 @@ wedges {
   border-radius: 25px;
 }
 
+.cardlist {
+    width: 90vw;
+    max-width: 1170px;
+    margin: 5rem auto;
+    display: grid;
+    gap: 2rem;
+}
+
+
+
+@media screen and (min-width:768px) {
+    .cardlist {
+        grid-template-columns: repeat(4, 1fr);
+
+    }
+}
